cmake_minimum_required(VERSION 3.0)

project(caser)

set(CMAKE_C_FLAGS "-std=c99 -pthread")
set(CMAKE_C_FLAGS_DEBUG "-std=c99 -pthread -g")
set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_FLAGS "-std=c++14 -pthread -g")
set(CMAKE_CXX_FLAGS_DEBUG "-std=c++14 -pthread -g")
set(CMAKE_CXX_STANDARD 14)

set(LIB_UTILS utils.cpp)
set(LIB_PARSER parser.cpp)
set(LIB_EVENT event.cpp)
set(LIB_CONTAINERS containers.cpp)
add_library(utils ${LIB_UTILS})
add_library(parser ${LIB_PARSER})
add_library(event ${LIB_EVENT})
# add_library(containers ${LIB_CONTAINERS})
set(LIBS utils)
set(LIBS ${LIBS} parser) 
set(LIBS ${LIBS} event) 
target_link_libraries(event parser)
# set(LIBS ${LIBS} containers) 
set(SOURCE server.cpp)

set(PNAME caser)
add_executable(${PNAME} ${SOURCE})
target_link_libraries(${PNAME} ${LIBS})
